colors from doc; spacing fixes

--- a/static/sass/_global-settings.scss
+++ b/static/sass/_global-settings.scss
@@ -3,4 +3,3 @@ $viewport-threshold:      1281px;
 $color-brand:             #e95420;
 $sp-medium-small: 1rem * .85 !default;
 $sp-medium-large: 1rem * 1.15 !default;
-$nav-bg-color: #333;
